# morning-brief

./: .env.example  .gitignore  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: contributing.md  troubleshooting.md
examples/: config.climate.yaml  config.crypto.yaml
morning_brief/: __init__.py  cli.py  config.py  core.py  dedup.py  doctor.py  email_sender.py  providers.py
morning_brief/data/: config.example.yaml  env.example
morning_brief/templates/: email.html.j2
tests/: test_config_providers.py  test_dedup.py  test_parse_digest.py
